fixed the spacing of the profile images

--- a/css/profilePages.css
+++ b/css/profilePages.css
@@ -1,3 +1,6 @@
+#userInfo {
+  transform: translate(0, 70px);
+}
 body{
     background-color: lightblue;
     font-family: "Open Sans", sans-serif;
@@ -64,8 +67,6 @@ html {
 #editNumber{
   text-align: right;
 }
-
-
 
 
 
